--- a/css/layout.css
+++ b/css/layout.css
@@ -1518,9 +1518,10 @@ figure.vimeo a img, figure.youtube a img {
     -o-transition: all 300ms linear;
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
+	border-radius: 10px;
 }
 .content:hover .content__mask {
-	opacity:0.2;
+	opacity:0.15;
 }
 .content--related {
 	height: 0;
@@ -1533,6 +1534,7 @@ figure.vimeo a img, figure.youtube a img {
 	opacity: 1;
 	display:block;
 	pointer-events: auto;
+	border-radius: 10px;
 }
 .content__title {
 	position:absolute;
