--- a/css/base.css
+++ b/css/base.css
@@ -22,6 +22,17 @@
 	#Misc */
 
 
+/* MAIN VAR COLORS 
+
+Llamar asi -> var(--main-bg-color)
+
+*/
+	:root {
+		--main-bg-color: brown;
+		--second-color: rgb(190, 95, 158);
+		--icon-color: rgb(255, 145, 0);
+	}
+
 /* #Reset & Basics (Inspired by E. Meyers)
 ================================================== */
 	::-webkit-scrollbar {
@@ -108,7 +119,7 @@ h6 { font-size: 15px; line-height: 22px;}
 /* #Links
 ================================================== */
 	a, a:visited { text-decoration: none; }
-	a:hover, a:focus { color: #e74c3c;}
+	a:hover, a:focus { color: var(--second-color);}
 	p a, p a:visited { line-height: inherit; text-decoration: none;}
 	a:focus{
 	outline:none;
@@ -158,7 +169,7 @@ h6 { font-size: 15px; line-height: 22px;}
 	input[type="submit"]:hover,
 	input[type="reset"]:hover,
 	input[type="button"]:hover {	
-	  color: #e74c3c;
+	  color: var(--second-color);
 	background:#292929;	 }
 
 	.button:active,
@@ -166,7 +177,7 @@ h6 { font-size: 15px; line-height: 22px;}
 	input[type="submit"]:active,
 	input[type="reset"]:active,
 	input[type="button"]:active {	
-	  color: #e74c3c;}
+	  color: var(--second-color);}
 
 	.button.full-width,
 	button.full-width,
