--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&subset=latin-ext');
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 /*
 * Skeleton V1.2
 * Copyright 2011, Dave Gamache
@@ -55,7 +57,7 @@
 ================================================== */
 body {
 	background: #fff;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight:400;
 	font-size: 15px;
 	line-height:23px;
