--- a/css/base.css
+++ b/css/base.css
@@ -28,9 +28,11 @@ Llamar asi -> var(--main-bg-color)
 
 */
 	:root {
-		--main-bg-color: brown;
-		--second-color: rgb(190, 95, 158);
-		--icon-color: rgb(255, 145, 0);
+		--main-bg-color: #ddbea9;
+		--second-color: #d1b19ebf;
+		--icon-color: #a5a58d;
+		--shadow:rgba(0, 0, 0, 0.80);
+		--tipeo: #999;
 	}
 
 /* #Reset & Basics (Inspired by E. Meyers)
@@ -70,10 +72,10 @@ body {
 	font-weight:400;
 	font-size: 15px;
 	line-height:23px;
-	color:#DCDCDC;
+	color:#FFF;
 	overflow-x:hidden;
 	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075);
  }
  html {
 		overflow-x:hidden; 
