--- a/css/colors/color-blue.css
+++ b/css/colors/color-blue.css
@@ -4,8 +4,9 @@
 	--icon-color: #a5a58d;
 	--shadow:rgba(0, 0, 0, 0.25);
 }
-
-
+/* 
+background: rgb(248,234,144);
+background: linear-gradient(337deg, rgba(248,234,144,1) 21%, rgba(234,233,229,1) 100%); */
 .portfolio-box-1 .mask,
 #filter li a span,
 .color-over-hero,
